--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@ body {
   /* color: var(--foreground); */
   /* background: var(--background); */
   font-family: Arial, Helvetica, sans-serif;
+  height: calc(100vh - 64px);
 }
 
 @layer base {
